--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://babysource.github.io
 root: /
-permalink: articles/:year/:month/:title/
+permalink: articles/:year/:month/:day/:title/
 permalink_defaults:
 
 # Directory
