--- a/_config.yml
+++ b/_config.yml
@@ -6,45 +6,43 @@
 title:
 subtitle:
 description:
+email: wythe@189.cn
 author: Wythe
 language: zh-CN
-timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://babysource.github.io
 root: /
-permalink: articles/:year/:month/:day/:title/
-permalink_defaults:
+permalink: articles/:year/:category/:month/:day/:title/
 
 # Directory
+tag_dir: tags
+i18n_dir: :lang
+code_dir: program
 source_dir: source
 public_dir: public
-tag_dir: tags
 archive_dir: archives
 category_dir: categories
-code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
 
 # Writing
 new_post_name: :year-:month-:day-:title.md
 default_layout: post
-titlecase: false
-external_link: true
-filename_case: 0
-render_drafts: false
-post_asset_folder: false
-relative_link: false
 future: true
+titlecase: false
 highlight:
   enable: true
+  tab_replace: true
   line_number: true
   auto_detect: false
-  tab_replace:
+filename_case: 0
+external_link: true
+render_drafts: false
+relative_link: false
+post_asset_folder: false
 
 # Category & Tag
-default_category: uncategorized
+default_category: general
 category_map:
 tag_map:
 
@@ -72,8 +70,14 @@ deploy:
   repo: https://github.com/babysource/babysource.github.io.git
   branch: master
 
+# Feed
+## Docs: https://github.com/hexojs/hexo-generator-feed
 feed:
   type: atom
   path: atom.xml
   limit: 30
-  hub:
+
+# Sitemap
+## Docs: https://github.com/hexojs/hexo-generator-sitemap
+sitemap:
+    path: sitemap.xml
