1.更新配置与博文

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title:
-subtitle:
+title: 弦外之影
+subtitle: 学而不思则罔，思而不学则殆！
 description:
 email: wythe@189.cn
 author: Wythe
